// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree column mode 1`] = `
.c13 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c13 g {
  fill: inherit;
  stroke: inherit;
}

.c13 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c13 *[stroke*="#"],
.c13 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c13 *[fill-rule],
.c13 *[FILL-RULE],
.c13 *[fill*="#"],
.c13 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 768px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 384px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px rgba(0,0,0,0.33);
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  cursor: pointer;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  cursor: pointer;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-left: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px;
}

.c9 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 12px;
}

.c12 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 1px;
}

.c8 {
  font-size: 14px;
  line-height: 20px;
}

.c11 {
  font-size: 12px;
  line-height: 18px;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4:focus {
  outline: 2px solid #6FFFB0;
}

.c6 {
  cursor: pointer;
}

.c6:focus {
  outline: none;
}

@media only screen and (max-width:768px) {
  .c2 {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-top: solid 1px rgba(0,0,0,0.33);
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c15 {
    border-left: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c15 {
    padding: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    width: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    width: 1px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <ul
          class="c4"
          tabindex="0"
        >
          <li
            class="c5 c6"
            tabindex="-1"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                All Resources
              </span>
              <div
                class="c9"
              />
              <div
                class="c10"
              >
                <span
                  class="c11"
                />
                <div
                  class="c12"
                />
                <svg
                  aria-label="FormNext"
                  class="c13"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="9 6 15 12 9 18"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </li>
          <li
            class="c14 c6"
            tabindex="-1"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                Air Group
              </span>
              <div
                class="c9"
              />
              <div
                class="c10"
              >
                <span
                  class="c11"
                />
                <div
                  class="c12"
                />
                <svg
                  aria-label="FormNext"
                  class="c13"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="9 6 15 12 9 18"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </li>
          <li
            class="c14 c6"
            tabindex="-1"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                Analytics
              </span>
              <div
                class="c9"
              />
              <div
                class="c10"
              >
                <span
                  class="c11"
                />
                <div
                  class="c12"
                />
                <svg
                  aria-label="FormNext"
                  class="c13"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="9 6 15 12 9 18"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </li>
          <li
            class="c14 c6"
            tabindex="-1"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                Guest Management
              </span>
              <div
                class="c9"
              />
              <div
                class="c10"
              >
                <span
                  class="c11"
                />
                <div
                  class="c12"
                />
                <svg
                  aria-label="FormNext"
                  class="c13"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="9 6 15 12 9 18"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </li>
          <li
            class="c14 c6"
            tabindex="-1"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                Network Management
              </span>
              <div
                class="c9"
              />
              <div
                class="c10"
              >
                <span
                  class="c11"
                >
                  4 sub-resources
                </span>
                <div
                  class="c12"
                />
                <svg
                  aria-label="FormNext"
                  class="c13"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="9 6 15 12 9 18"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </li>
          <li
            class="c14 c6"
            tabindex="-1"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                Reports
              </span>
              <div
                class="c9"
              />
              <div
                class="c10"
              >
                <span
                  class="c11"
                />
                <div
                  class="c12"
                />
                <svg
                  aria-label="FormNext"
                  class="c13"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="9 6 15 12 9 18"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </li>
          <li
            class="c14 c6"
            tabindex="-1"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                Resource Foo
              </span>
              <div
                class="c9"
              />
              <div
                class="c10"
              >
                <span
                  class="c11"
                >
                  2 sub-resources
                </span>
                <div
                  class="c12"
                />
                <svg
                  aria-label="FormNext"
                  class="c13"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="9 6 15 12 9 18"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </li>
          <li
            class="c14 c6"
            tabindex="-1"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                Resource Foo1
              </span>
              <div
                class="c9"
              />
              <div
                class="c10"
              >
                <span
                  class="c11"
                />
                <div
                  class="c12"
                />
                <svg
                  aria-label="FormNext"
                  class="c13"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="9 6 15 12 9 18"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </li>
          <li
            class="c14 c6"
            tabindex="-1"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                Resource Foo2
              </span>
              <div
                class="c9"
              />
              <div
                class="c10"
              >
                <span
                  class="c11"
                />
                <div
                  class="c12"
                />
                <svg
                  aria-label="FormNext"
                  class="c13"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="9 6 15 12 9 18"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </li>
          <li
            class="c14 c6"
            tabindex="-1"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                United Communications
              </span>
              <div
                class="c9"
              />
              <div
                class="c10"
              >
                <span
                  class="c11"
                >
                  2 sub-resources
                </span>
                <div
                  class="c12"
                />
                <svg
                  aria-label="FormNext"
                  class="c13"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="9 6 15 12 9 18"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </li>
          <li
            class="c14 c6"
            tabindex="-1"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                Virtual Gateways
              </span>
              <div
                class="c9"
              />
              <div
                class="c10"
              >
                <span
                  class="c11"
                />
                <div
                  class="c12"
                />
                <svg
                  aria-label="FormNext"
                  class="c13"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="9 6 15 12 9 18"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="c15"
      />
    </div>
  </div>
</div>
`;

exports[`Tree column nested 1`] = `
.c6 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c6 *[stroke*="#"],
.c6 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*="#"],
.c6 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px rgba(0,0,0,0.33);
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  cursor: pointer;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  cursor: pointer;
}

.c7 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 12px;
}

.c8 {
  font-size: 14px;
  line-height: 20px;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c2:focus {
  outline: 2px solid #6FFFB0;
}

.c4 {
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

@media only screen and (max-width:768px) {
  .c3 {
    border-top: solid 1px rgba(0,0,0,0.33);
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    width: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <ul
      class="c2"
      tabindex="0"
    >
      <li
        class="c3 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            All Resources
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Air Group
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Analytics
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Guest Management
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Network Management
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Reports
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Resource Foo
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Resource Foo1
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Resource Foo2
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            United Communications
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Virtual Gateways
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tree should have no accessibility violations 1`] = `
.c6 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c6 *[stroke*="#"],
.c6 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*="#"],
.c6 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px rgba(0,0,0,0.33);
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  cursor: pointer;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  cursor: pointer;
}

.c7 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 12px;
}

.c8 {
  font-size: 14px;
  line-height: 20px;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c2:focus {
  outline: 2px solid #6FFFB0;
}

.c4 {
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

@media only screen and (max-width:768px) {
  .c3 {
    border-top: solid 1px rgba(0,0,0,0.33);
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    width: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <ul
      class="c2"
      tabindex="0"
    >
      <li
        class="c3 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            All Resources
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Air Group
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Analytics
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Guest Management
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Network Management
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Reports
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Resource Foo
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Resource Foo1
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Resource Foo2
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            United Communications
          </span>
        </div>
      </li>
      <li
        class="c9 c4"
        tabindex="-1"
      >
        <div
          class="c5"
        >
          <svg
            aria-label="FormNext"
            class="c6"
            viewBox="0 0 24 24"
          >
            <polyline
              fill="none"
              points="9 6 15 12 9 18"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c7"
          />
          <span
            class="c8"
          >
            Virtual Gateways
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
